--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -128,6 +128,10 @@ bg:
             youversion: "YouVersion: The world’s most popular Bible App"
             in partnership: "in partnership with"
             one hope: "One Hope: Extraordinary Bible content for Kids"
+        links: 
+            apple: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8"
+            google: "http://play.google.com/store/apps/details?id=com.bible.kids"
+            amazon: "http://www.amazon.com/gp/product/B00GURLC40"
     now: "Сега"
     celebrating 50MM: "С над 50 милиона инсталирани приложения"
     link: "Връзка"
@@ -192,6 +196,7 @@ bg:
     reader: "Четец"
     lifechurch short url: "LifeChurch.tv"
     about: "За нас"
+    versions link: "Versions"
     jobs: "Проекти"
     privacy policy: "Декларация за поверителност"
     terms: "Условия за ползване"
@@ -711,6 +716,16 @@ bg:
             reading: "reading"
             readings: "readings"
             readings 5 or more: "readings"
+        stats: 
+            friends reading: 
+                one: "%{count} friend subscribed to this plan"
+                other: "%{count} friends subscribed to this plan"
+            friends completed: 
+                one: "%{count} friend has completed this plan"
+                other: "%{count} friends have completed this plan"
+            total completions: "Over %{count} completions"
+            view all: "View All"
+            close: "Close"
         settings: "Настройки"
         privacy: 
             visible to friends?: "Do you want your friends to see your Plan activity?"
@@ -1000,7 +1015,7 @@ bg:
                 now skipped: "Страницата няма да бъде пропускана"
             features: 
                 read heading: "Чети БИБЛИЯТА"
-                read description: "Избери от <strong>стротици версии на БИБЛИЯТА</strong>. Сравни различни версии. Избери шрифт и размер."
+                read description: "Take your choice from <a href='%{versions_path}'>hundreds of Bible versions and languages</a>. Compare two versions side by side. You can even choose your font and display size. Make your online Bible experience just the way you like it."
                 study heading: "Изучавай БИБЛИЯТА"
                 study description: "<strong>Маркирай</strong> в любимия си цвят. <strong>Маркирай</strong> любимия си стих от БИБЛИЯТА, води бележки. Не само че прекарваш време с Божието слово, но градиш история с БИБЛИЯТА."
                 subscribe heading: "запиши се за план за четене на БИБЛИЯТА"
