--- a/config/locales/lv.yml
+++ b/config/locales/lv.yml
@@ -128,6 +128,10 @@ lv:
             youversion: "YouVersion: The world’s most popular Bible App"
             in partnership: "in partnership with"
             one hope: "One Hope: Extraordinary Bible content for Kids"
+        links: 
+            apple: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8"
+            google: "http://play.google.com/store/apps/details?id=com.bible.kids"
+            amazon: "http://www.amazon.com/gp/product/B00GURLC40"
     now: "Tagad"
     celebrating 50MM: "Svinam 50 miljonu aplikāciju instalējumus!"
     link: "Saite"
@@ -139,7 +143,7 @@ lv:
     make a donation: "Ziedot"
     thanks for your donation: "Paldies par ziedojumu!"
     thanks authorization: "Ja jūs pieprasījāt čeku, tas pēc īsa brīža būs jūsu e-pastā."
-    donation error: "Piedodiet, kaut kas notikās ar jūsu ziedojumu. Kļūme bija: %{error_text}"
+    donation error: "Piedodiet, kaut kas notika ar jūsu ziedojumu. Kļūme bija: %{error_text}"
     created ago: "Izveidots pirms %{time_ago}"
     copy: "Kopēt"
     copy confirmed: "Nokopēts!"
@@ -152,7 +156,7 @@ lv:
     deleted connection error: "Piedodiet, radās kļūda mēģinot atslēgties no jūsu konta %{connection}"
     connection marketing: "Ar draugiem YouVersion ir daudz jautrāks! Piesaisti savu YouVersion kontu pie citiem sociālajiem tīkliem un atrodi savus draugus, kas arī lieto YouVersion. Sasaistot savus kontus arī ļauj dalīties ar jebkuru saturu tikai ar dažiem klikšķiem. Bez Jūsu atļaujas mēs nekad neko nepublicēsim."
     next step connections: "Tālāk: sasaistiet savu kontu un atrodiet savus draugus"
-    no notes found: "%{username} nav piezīmes."
+    no notes found: "%{username} nav piezīmju."
     no recent activity: "%{username} nav nesenās aktivitātes"
     no badges found yourself: "Jūs vēl neesat nopelnījis nevienu nozīmīti."
     no badges found other: "%{username} nav nopelņījis nevienu nozīmīti vēl."
@@ -192,6 +196,7 @@ lv:
     reader: "Lasītājs"
     lifechurch short url: "LifeChurch.tv"
     about: "Par"
+    versions link: "Versions"
     jobs: "Vakances"
     privacy policy: "Konfidencionalitātes politika"
     terms: "Nosacījumi"
@@ -565,7 +570,7 @@ lv:
             conduct text: "Jūs saprotat, ka visa informācija, dati, teksts, programmatūra, mūzika, skaņas, photogrāfijas, grafika, video, ziņojumi, birkas, blogi vai foruma ieraksti, vai citi materiāli ('Content'), vai nu publiski sūtīti vai privāti pārraidīti, atbildība gulstās uz pašu šo personu, no kura ir nākusi saturs. Tas nozīmē, ka esat pilnībā atbildīgi par visu saturu, ko augšuplādējat, publicējat, nosūtat pa e-pastu, pārraidīt vai citādi padarīt pieejamu caur YouVersion. Lai gan LifeChurch.tv seko saturam, kas tiek publicēts caur YouVersion, LifeChurch.tv nevar garantēt precizitāti, integritāti, kvalitāte vai šāda satura piemērotību. Jūs saprotat un piekrītt, ka lietojot YouVersion, jūs varat tikt pakļauts saturam, kas ir aizvainojošs, necienīgs vai pretrunīgs. Jūs piekrītat nelietot YouVersion lai:<ul type='none'><li>augšuplādēt, publicētu, sūtītu pa e-pastul, pārraidīt vai padarīt pieejamu citā veidā jebkādu saturu kas ir nelikumīgs, kaitējošs, draudošs, ļaunprātīgs, uzmācīgs, aizliegts, deformējošs, vulgārs, piedauzīgs, apmelojošs, aizskar kādas personas privātumu, naidpilns, diskriminējošs, vai rasistiski, etniski vai kā citādi nosodāms;</li><li>nodara pāri minoritātēm;</li><li>uzdodoties par citu personu vai organizāciju, ieskaitot, bet ne tikai aprobežojoties ar LifeChurch.tv pārstāvi, foruma vadītāju, pavadoni vai namatēvu, vai nepatiesi sniegt paziņojumus vai savādāk reprezentēt savu saistību ar personu vai organizāciju;</li><li>viltot virsrakstus vai citādi manipulēt ar identifikatoriem, lai slēptu caur YouVersion nosūtāmā satura izcelsmi;</li><li>augšuplādēt, publicēt vai nosūtīt pa e-pastu, pārraidīt vai savādāk padarīt pieejamu saturu uz kuru jums nav nekādu tiesību, lai padarītu to pieejamu pie jebkāda likuma vai līguma saistībām vai kā uzticības personai (kā, piemēram, iekšējā informācija, īpašuma vai konfidenciāla informācija, kas iegūta vai tika izpausta kā daļa no darba attiecībām vai kā daļa no neizspaužamajiem līgumiem);</li><li>augšuplādēt, publicēt vai nosūtīt pa e-pastu, pārraidīt vai savādāk padarīt pieejamu saturu, kas pārkāpj jebkuru pušu jebkādus patentus, preču zīmes, komercnoslēpumus, autortiesības vai citas īpašuma tiesības ('Rights');</li><li>augšuplādēt, publicēt vai nosūtīt pa e-pastu, pārraidīt vai savādāk padarīt pieejamu jebkuru nevēlamu vai neatļautu reklāmu, vai veicināšanas materiālus, 'surogātpastu,' 'mēstules,' 'ķēdes vēstules,' 'piramīdu shēmas,' vai cita veida lūgumus</li><li>augšuplādēt, publicēt vai nosūtīt pa e-pastu, pārraidīt vai savādāk padarīt pieejamu jebkuru materiālu, kas satur programmatūras vīrusus vai  citus datora kodus, failus vai programmas radītas, lai traucētu, iznīcinātu vai ierobežotu jebkura datora programmatūras vai aparatūras vai telekomunikācijas aprīkojumu funkcionalitāti;</li><li>sagraut normālo dialogu plūsmu vai citādi rīkoties tā, lai negatīvi ietekmētu citu lietotāju spēju iesaistīties reāllaika apmaiņas procesos;</li><li>traucēt vai sagraut YouVersion vai serverus vai tīklus savienotos ar YouVersion, vai nepaklausīt citām YouVersion pieslēgtā tīkla prasībām, procedūrām, politikai vai regulējumiem;</li><li>ar nodomu vai nejauši pārkāpt jebkādus vietējos, valsts, nacionālos vai starptautiskos tiesību aktus;;</li><li>sniegt materiālo atbalstu vai citus resursus (slēpt vai viltot materiālā atbalsta vai citu resursa raksturu, atrašanās vietu, izcelšanos vai īpašumtiesības) jebkādai ASV valdības radītajai organizācijai(ām) kā ārvalstu teroristu organizācijai saskaņā ar Imigrācijas un pilsonības likumu 219 sadaļu;</li><li>'izsekot' vai citādi uzmākties citiem; un/vai</li><li>vākt vai uzglabāt citu lietotāju personas datus saistībā ar iepriekš izklāstītu aizliegtu rīcību.</li></ul>LifeChurch.tv nodrošina YouVersion bez kompensācijām, personiskiem un nemateriāliem garīgiem un/vai reliģioziem ieguvumiem. Jūs apzināties, ka LifeChurch.tv var arī nepārskatīt iepriekš saturu, bet LifeChurch.tv un tās izstrādātājiem būs tiesības (bet ne pienākums) jebkāda iemesla dēl pēc saviem uzskatiem pārskatīt, noraidīt, vai izdzēst jebkuru saturu, kas ir pieejams caur YouVersion.<br><br>Jūs apzināties, atļaujat un piekrītat, ka LifeChurch.tv var piekļūt, saglabāt un atklāt jūsu konta informāciju un saturu, ja tas tiks ar likumu pieprasīts vai ticot tam, ka šāda informācijas glabāšana vai atklāšana ir saprāta robežās nepieciešama, lai:<ul><li>pakļautos likuam;<li>pastiprināt Lietošanas nosacījumus;</li><li>reaģēt uz pretenzijām, ka saturs pārkāpj trešo pušu tiesības;</li><li>atbildēt uz jūsu pieprasījumu atbalsta centram; vai</li><li> aizsargāt LifeChurch.tv tiesības, īpašumu un personīgo drošību, tās lietotājus un publiku.</li></ul><br>Jūs saprotat, ka YouVersion tehniskā apstrāde un pārraide, ieskaitot jūsu saturu, var ietvert sevī<ul><li>pārraides pa vairākiem tīkliem; un</li><li>izmaiņas, lai atbilstu un pielāgotos savienojoto tīklu vai ierīču tehniskajām prasībām.</li></ul>"
             international title: "Vispārēja komunikāciju daba"
             international text: "Jūs atzīstat, ka, izmantojot YouVersion, jūs saziņa notiks caur LifeChurch.tv datortīkliem, kas atrodas visā pasaulē. Tā rezultātā, pat komunikācijas, kas, šķiet, ir vietēja rakstura, var tikt nosūtīti gan kā vietējā gan kā globālā komunikācija neatkarīgi no tā, kur jūs atrodaties fiziski pārraides laikā. Tādējādi jūs atzīstat, ka YouVersion izmantošana izraisa vietēju un starptautisku informācijas apriti. Pārzinot vispasaules interneta raksturu, jūs piekrītat ievērot visus vietējos noteikumus par rīcību tiešsaistē un pieņemamu saturu. Proti, jūs piekrītat ievērot visus piemērojamos likumus attiecībā uz tehnisko datu pārraidi kas iziet no Amerikas Savienotajām Valstīm vai valstis, kurā jūs dzīvojat."
-            content title: "Saturs, kas tika iesniegts vai pataisīts par pieejamu, pakalpojuma iekļāušanā."
+            content title: "Saturs, kas tika iesniegts vai padarīts par pieejamu, pakalpojuma iekļaušanā."
             content text: "LifeChurch.tv nepatur īpašumtiesības saturam ko jūs publicējat vai padariet pieejamu iekļaušanai YouVersion. Tomēr, attiecībā pret jūsu publicēto saturu iekļaušanai publiski pieejamām vietām YouVersion, jūs ļaujat LifeChurch.tv visapkārt pasaulei, bez atlīdzības un neekskluzīvas license(s), kas piemērojami:<ul type='none'><li>Attiecībā pret jūsu publicēto saturu iekļaušanai publiski pieejamām vietām YouVersion, lietošanas atļauja, izplatīšana, pavairošana, adaptēšana, adaptēšana, publiska izpildīšana, publiska izrādīšana un šāda satura atvasinājumu izveidošana priekš specifisku YouVersion vietu nodrošināšanu un veicināt šo YouVersion lauku, kuram šāds saturs tika publicēts vai padarīts par pieejamu. Šī licence ir spēkā tik ilgi, kamēr jūs izvēlaties turpināt iekļaut šādu saturu YouVersion un izdzēst laikā vai kad LifeChurch.tv izdzēsīs šo saturu no YouVersion.</li><br><li>Attiecībā uz saturu, kas nav fotogrāfijas, grafika, audio vai video jūs publicējat vai padarāt pieejamu priekš iekļaušanas publiskajām vietām YouVersion, patstāvīgas, neatsaucamu un pilnīgi apakš-licenzētu licenci lietošanai, izplatīšanai, reprodukcijai, modifikācijai, adaptēšanai, publiskošanai, tulkošanai, publiski izpildāmai, publiski izstādāmai un šāda satura atvasināšanai (pilnīgi vai daļēji)  un šāda satura sadarbību ar citiem darbiem jebkurā formātā vai mēdijā zināmam tagad vai vēlāk izgudrotam.</li><br><li>'Publiski pieejams.' 'Publiski pieejams' YouVersion vietas ir tās vietas,  kuras ir paredzētas priekš pārējās sabiedrības. YouVersion publiski pieejamās vietas iekļautu sevī, bet neaprobežojas ar ziņojuma vietām, bloga komentāriem, kopienas apgabaliem un forumiem, kas ir atvērti gan lietotājiem, gan apmeklētājiem.</li></ul>"
             contributions title: "Ieguldījums YouVersion"
             contributions text: "Iesniedzot idejas, ierosinājumus, dokumentus un/vai priekšlikumus (&quot;Ieguldījumi&quot;), priekš YouVersion, jūs atzīstat un piekrītat, ka:<ul><li> jūsu ieguldījumi nesatur konfidenciālu vai patentētu informāciju;</li><li> LifeChurch.tv nav nekādu konfidencialitātes pienākumu, tiešu vai netiešu, attiecībā uz iemaksām;</li><li> LifeChurch.tv ir tiesības izmantot vai atklāt (vai izvēlēties vai izmantot vai atklāt) šādus ieguldījumus jebkādiem mērķiem, jebkādā veidā, jebkuros pasaules medijos;</li><li> var būt, ka LifeChurch.tv jau izskata vai izstrādā ko līdzīgu ieguldījumiem;</li><li> Jūsu iemaksas automātiski kļūst par LifeChurch.tv īpašumu bez jebkāda pienākuma pret jums; un</li><li> jums nav tiesību uz kompensāciju vai jebkāda veida atlīdzību pie jebkādiem apstāļiem no LifeChurch.tv.</li>&lt;/ ul&gt;"
@@ -711,6 +716,18 @@ lv:
             reading: "lasīšanas"
             readings: "lasījumi"
             readings 5 or more: "lasījumi"
+        stats: 
+            friends reading: 
+                zero: "%{count} friends subscribed to this plan"
+                one: "%{count} friend subscribed to this plan"
+                other: "%{count} friends subscribed to this plan"
+            friends completed: 
+                zero: "%{count} friends have completed this plan"
+                one: "%{count} friend has completed this plan"
+                other: "%{count} friends have completed this plan"
+            total completions: "Over %{count} completions"
+            view all: "View All"
+            close: "Tuvu"
         settings: "Uzstādījumi"
         privacy: 
             visible to friends?: "Vai vēlies, lai Tavi draugi redz Tavu plānu aktivitāti?"
@@ -845,7 +862,7 @@ lv:
             email: "Ievadiet savu e-pastu"
             username: "Ievadiet savu lietotājvārdu"
             password: "Ievadiet savu paroli"
-        with email: "Pieraktieties izmantojot savu e-pasta adresi"
+        with email: "Pierakstīties, izmantojot savu e-pasta adresi"
         with facebook: "Pierakstīties ar Facebook"
         benefits title: "Iegūsti pilnvērtīgu pieredzi"
         benefits blurb: "Izveidojot YouVersion kontu, tas ļauj piekļūt tādām iespējām kā grāmatzīmēm un piezīmēm. Tās tiks parādītas uz jebkuras ierīces caur kuru jūs esat ielogojies. Konts arī atvieglo dalīšanos ar Bībeli ar jūsu draugiem, tāpēc velti pāris minūtes lai reģistrētos!"
@@ -966,7 +983,7 @@ lv:
         h3 sub: "Pieejams vairāk kā %{language_count} valodās visā pasaulē."
         main: "Desmitiem miljonu cilvēku lieto Bībeles aplikāciju™ lai padarītu Dieva Vārdu par daļu no viņu ikdienas dzīves. Lejupielādē bezmaksas aplikāciju un piekļūsti savām grāmatzīmēm, piezīmēm un lasīšanas plāniem no jebkuras vietas. Izbaudi simtiem tulkojumu, ieskaitot audio, viss uz tavas mobilās ierīces."
         button h4: "Doties uz Bible.com/app"
-        button h4 sub: "Uz jūsu ierīces"
+        button h4 sub: "Jūsu mobilajā ierīcē"
         download now: "Lejuplādējiet Bībeles aplikāciju tagad"
         what people: "Ko cilvēki saka par bezmaksas Bībeles aplikāciju..."
         t1: "Man vienmēr ir Vārds"
@@ -1000,9 +1017,9 @@ lv:
                 now skipped: "Šo lapu tagad izlaidīsim."
             features: 
                 read heading: "Lasīt Bībeli."
-                read description: "Izvēlieties starp <strong>simtiem Bībeles tulkojumiem un valodām</strong>. Salīdziniet divas versijas blakus vienu otrai. Jūs pat varat izvēlēties jūsu fontu un teksta izmēru. Padariet savu tiešsaistes pieredzi Bībeles iepazīšanā tieši tādu, kā jums patīk."
+                read description: "Izvēlies no simtiem Bībeles versiju un valodu. <a href='%{versions_path}'></a>Salīdzini divas versijas vienu otrai blakus. Tu pat vari izvēlēties fonta un ekrāna izmēru. Padari savu tiešsaistes Bībeles pieredzi tieši tādu, kā Tev patīk."
                 study heading: "Studēt Bībeli."
-                study description: "<strong>Ieezīmē</strong> savā mīļākajā krāsā, <strong>ieliec grāmatzīmi</strong> pie mīļākās Bībeles rakstu vietas un izveido piezīmes par to, ko mācies. Tu ne tikai pavadi savu laiku Dieva Vārdā, bet mijiedarbojies ar Bībeli."
+                study description: "<strong>Iezīmē</strong> savā mīļākajā krāsā, <strong>ieliec grāmatzīmi</strong> pie mīļākās Bībeles rakstu vietas un izveido piezīmes par to, ko mācies. Tu ne tikai pavadi savu laiku Dieva Vārdā, bet mijiedarbojies ar Bībeli."
                 subscribe heading: "Pierakstīties Bībeles plāniem."
                 subscribe description: "Aptver visu Bībeli, koncentrējies un tēmas vai lasi dievbijīgi no apdāvināta skolotāja. Izvēlies savu lasīšanas plānu un katru dienu tevi sagaidīs jauna Bībelē izvēlēta rakstu vieta."
                 download heading: "Ņem Bībeli sev līdzi."
@@ -1061,9 +1078,9 @@ lv:
             logo: "YouVersion: Bībeles aplikācija"
             tagline: "Tas sākas ar <em>100 miljoniem</em>"
             intro: "Vai Bībeles aplikācijai līdz mūsu 5. jubilejai 10. Jūlijā ir iespējams sasniegt 100 miljonu uzstādīšanu? Tikai ar tavu palīdzību!"
-            after: "Ar jūsu palīdzību, Bībeles aplikācija sasniedza 100 miljonu uzstādīšanas reizes līdz mūsu 5. jubilejai 10. jūlijā. Paldies jums!"
+            after: "Ar jūsu palīdzību, Bībeles aplikācija sasniedza 100 miljonus uzstādīšanas reižu līdz mūsu 5. jubilejai 10. jūlijā. Paldies jums!"
             share: 
-                with friends: "Dadies ar saviem draugiem"
+                with friends: "Dalies ar saviem draugiem"
                 fb: 
                     dialog name: "Vai tev jau ir Bībeles aplikācija?"
                     dialog desc: "Es mīlu Bībeles aplikāciju! Tā tiešām ir palīdzējusi padarīt Bībeli par daļu no manas ikdienas dzīves. Tā dod iespēju man iezīmēt, klausīties Bībeles audio ierakstus, veidot piezīmes, lasīt dievbijīgus plānus...pat skatīties video! Dodies un lejupielādē to tagad (tā ir bezmaksas): http://www.bible.com/app"
@@ -1086,7 +1103,7 @@ lv:
                 tagline: "Veidosim vēsturi kopīgi"
                 button: "Dalies caur Bībeles aplikāciju"
     ui: 
-        characters remaining: "rakstzīmes paliek"
+        characters remaining: "atlikušo rakstzīmju"
         yes button: "Jā"
         no button: "Nē"
         cancel: "Atcelt"
