--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -97,9 +97,9 @@ zh-CN:
         by youversion: "YouVersion提供的"
         help your kids: "帮助您的孩子爱上神的话。"
         free download: "免费下载！"
-        app store: "可以在App 商店中获得"
-        google play: "在Google商店中获得"
-        amazon: "安卓版本可以在Amazon商店中获得"
+        app store: "从 App商店下载"
+        google play: "从 Google商店下载"
+        amazon: "从 Amazon商店下载安卓版本"
         app icon: "儿童圣经软件的图标"
         jesus and friends: "耶稣和朋友们"
         interact text: "与圣经互动并见证它融入生活。"
@@ -109,15 +109,15 @@ zh-CN:
         story text 4: "天使向牧羊人显现报告基督降生的信息"
         story text 5: "耶稣治好长大麻风的"
         feature 1: "给您孩子的免费圣经体验"
-        feature 2: "智能手机和平板电脑上的生动的故事软件"
+        feature 2: "为智能手机和平板电脑设计的动画故事软件"
         feature 3: "多彩的配图及点击促动的动画"
         feature 4: "游戏和活动帮助孩子们记住所学的"
-        feature 5: "适宜儿童的导航"
+        feature 5: "适合儿童的操作"
         share: 
             tell friends: "向朋友们介绍儿童圣经软件"
             facebook name: "儿童圣经软件"
-            facebook description: "儿童圣经软件上线啦！互动的圣经故事帮助您的孩子藉着神的话学习、娱乐和成长。今天就免费下载iOS和安卓版本免费软件吧：www.bible.com/kids"
-            facebook link: "http://www.bible.com/kids"
+            facebook description: "儿童圣经软件上线啦！互动的圣经故事帮助您的孩子藉着神的话学习、娱乐和成长。今天就免费下载iOS和安卓版本免费软件吧：www.bible.com/ertong"
+            facebook link: "http://www.bible.com/ertong"
             facebook redirect: "http://www.bible.com/ertong"
             twitter description: "这里有@YouVersion的儿童圣经软件！有趣而且完全免费。下载地址：bible.com/ertong"
             twitter hashtags: "儿童圣经"
@@ -128,6 +128,10 @@ zh-CN:
             youversion: "YouVersion：世界上最受欢迎的圣经软件"
             in partnership: "合作"
             one hope: "一个愿望：为儿童提供超凡的圣经内容"
+        links: 
+            apple: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8"
+            google: "http://play.google.com/store/apps/details?id=com.bible.kids"
+            amazon: "http://www.amazon.com/gp/product/B00GURLC40"
     now: "今日社区"
     celebrating 50MM: "庆祝5000万的安装！"
     link: "链接"
@@ -192,6 +196,7 @@ zh-CN:
     reader: "阅读器"
     lifechurch short url: "LifeChurch.tv"
     about: "关于我们"
+    versions link: "译本"
     jobs: "工作机会"
     privacy policy: "隐私政策"
     terms: "使用条款"
@@ -711,6 +716,14 @@ zh-CN:
             reading: "个阅读内容"
             readings: "个阅读内容"
             readings 5 or more: "个阅读内容"
+        stats: 
+            friends reading: 
+                other: "%{count}位朋友订阅了此计划"
+            friends completed: 
+                other: "%{count}位朋友完成此计划"
+            total completions: "完成次数超过 %{count} "
+            view all: "查看全部"
+            close: "关闭"
         settings: "设置"
         privacy: 
             visible to friends?: "您希望了解您朋友的读经活动吗？"
@@ -1000,7 +1013,7 @@ zh-CN:
                 now skipped: "从现在开始，本页将被自动跳过。"
             features: 
                 read heading: "阅读圣经"
-                read description: "您可从<strong>数以百计的圣经译本和语言</strong>中任意选择，并排比较两个译本，甚至可以选择字体和显示尺寸，用你自己喜欢的方式来在线阅读圣经。"
+                read description: "您可从<a href='%{versions_path}'>数以百计的圣经译本和语言</a>中任意选择，并排比较两个译本，甚至可以选择字体和显示尺寸，用你自己喜欢的方式来在线阅读圣经。"
                 study heading: "研读圣经"
                 study description: "用您喜爱的颜色来做<strong>高亮显示</strong>，为您喜欢的圣经经节做<strong>标签</strong>，边阅读边做笔记。当您花时间在神的话语上时，其实也在同时建立您与圣经之间的亲密关系。"
                 subscribe heading: "订阅计划"
