--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -128,6 +128,10 @@ en-GB:
             youversion: "YouVersion: The world’s most popular Bible App"
             in partnership: "in partnership with"
             one hope: "One Hope: Extraordinary Bible content for Kids"
+        links: 
+            apple: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8"
+            google: "http://play.google.com/store/apps/details?id=com.bible.kids"
+            amazon: "http://www.amazon.com/gp/product/B00GURLC40"
     now: "Now"
     celebrating 50MM: "Celebrating 50 Million App Installations!"
     link: "Link"
@@ -192,6 +196,7 @@ en-GB:
     reader: "Reader"
     lifechurch short url: "LifeChurch.tv"
     about: "About"
+    versions link: "Versions"
     jobs: "Jobs"
     privacy policy: "Privacy policy"
     terms: "Terms"
@@ -711,6 +716,16 @@ en-GB:
             reading: "reading"
             readings: "readings"
             readings 5 or more: "readings"
+        stats: 
+            friends reading: 
+                one: "%{count}friend subscribed to this plan"
+                other: "%{count} friends subscribed to this plan"
+            friends completed: 
+                one: "%{count} friend has completed this plan"
+                other: "%{count} friends have completed this plan"
+            total completions: "Over %{count} completions"
+            view all: "View all"
+            close: "Close"
         settings: "Settings"
         privacy: 
             visible to friends?: "Do you want your friends to see your plan activity?"
@@ -1000,7 +1015,7 @@ en-GB:
                 now skipped: "This page will now be skipped."
             features: 
                 read heading: "Read the Bible."
-                read description: "Take your choice from <strong>hundreds of Bible versions and languages</strong>. Compare two versions side by side. You can even choose your font and display size. Make your on-line Bible experience just the way you like it."
+                read description: "Take your choice from <a href='%{versions_path}'>hundreds of Bible versions and languages</a>. Compare two versions side by side. You can even choose your font and display size. Make your online Bible experience just the way you like it."
                 study heading: "Study the Bible."
                 study description: "<strong>Highlight</strong> in your favourite colour, <strong>bookmark</strong> your favourite Bible verses, and make notes about what you're learning. Not only are you spending time in God's Word, you're building a history of your interaction with the Bible."
                 subscribe heading: "Subscribe to Bible plans."
