--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -128,6 +128,10 @@ uk:
             youversion: "YouVersion: The world’s most popular Bible App"
             in partnership: "in partnership with"
             one hope: "One Hope: Extraordinary Bible content for Kids"
+        links: 
+            apple: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8"
+            google: "http://play.google.com/store/apps/details?id=com.bible.kids"
+            amazon: "http://www.amazon.com/gp/product/B00GURLC40"
     now: "Зараз"
     celebrating 50MM: "Святкуємо 50 мільйонів встановлень!"
     link: "Посилання"
@@ -192,6 +196,7 @@ uk:
     reader: "Читанка"
     lifechurch short url: "LifeChurch.tv"
     about: "Про YouVersion"
+    versions link: "Версії"
     jobs: "Вакансії"
     privacy policy: "Політика приватності"
     terms: "Умови"
@@ -711,6 +716,20 @@ uk:
             reading: "читання Біблії"
             readings: "читання Біблії"
             readings 5 or more: "читання Біблії"
+        stats: 
+            friends reading: 
+                one: "%{count} друг підписався на цей план"
+                few: "%{count} друга підписалися на цей план"
+                many: "%{count} друзів підписалися на цей план"
+                other: "%{count} друга пілписались на цей план"
+            friends completed: 
+                one: "%{count} друг завершив цей план"
+                few: "%{count} друга завершили цей план"
+                many: "%{count} друзів завершили цей план"
+                other: "%{count} друга завершили цей план"
+            total completions: "Понад %{count} завершень"
+            view all: "Переглянути усе"
+            close: "Закрити"
         settings: "Налаштування"
         privacy: 
             visible to friends?: "Ви хочете, щоб ваші друзі бачити вашу діяльність з планом?"
@@ -1000,7 +1019,7 @@ uk:
                 now skipped: "Ця сторінка буде пропускатися."
             features: 
                 read heading: "Читайте Біблію."
-                read description: "Візьміть свій вибір з  <strong>сотень версій Біблії та мов</strong>. Безпосередньо порівнюйте дві версії. Ви навіть можете вибрати шрифт і розмір екрану. Налаштуйте як вам до вподоби ваше пізнання онлайн Біблії."
+                read description: "Зробіть свій вибір серед <a href='%{versions_path}'>сотень версій Біблії та мов.</a>Порівнюйте поруч дві версії. Ви можете вибрати розмір тексту та шрифт. Працюйте з онлайн Біблією саме так, як вам подобається."
                 study heading: "Вивчайте Біблію."
                 study description: "<strong>Виділяйте</strong> вашим улюбленим кольором, <strong>закладайте</strong> ваші улюблені вірші з Біблії і робіть нотатки про те, що ви вивчаєте. Ви не тільки проводите час з Словом Божим, ви створюєте історію вашої взаємодії з Біблією."
                 subscribe heading: "Підпишіться на Біблійні Плани."
